# ad-testing-agents

./: .env.example  .gitignore  2026-02-04-ad-testing-saas-design.md  2026-02-04-implementation-plan.md  PROGRESS.md  PROJECT_STRUCTURE.md  PROMPT.md  QUICKSTART.md  README.md  pyproject.toml
dashboard/: app.py
dashboard/pages/: 2_📊_Сравнение_Офферов.py
data/: test_offers.json
saas/: Dockerfile  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  vitest.config.ts  vitest.setup.ts
saas/.github/workflows/: ci.yml  deploy.yml
saas/__tests__/api/: offers.test.ts  personas.test.ts  projects.test.ts  register.test.ts  test-runs.test.ts
saas/__tests__/lib/: auth-guard.test.ts  insights.test.ts  limits.test.ts  onboarding.test.ts  parse-response.test.ts  rate-limit.test.ts  validation.test.ts
saas/__tests__/workers/: evaluation-worker.test.ts
saas/app/: layout.tsx  page.tsx
saas/app/dashboard/: layout.tsx  page.tsx
saas/components/: offer-card.tsx  offer-editor.tsx  persona-card.tsx  persona-editor.tsx
saas/components/report/: failed-card.tsx  (+6 more)
saas/e2e/: full-flow.spec.ts
saas/lib/: auth-guard.ts  auth.ts  limits.ts  onboarding.ts  openrouter.ts  rate-limit.ts  validation.ts
saas/nginx/: default.conf
saas/prisma/: demo-results.json  schema.prisma  seed.ts
saas/scripts/: backup.sh  test-eval-custom.ts  test-eval.ts
saas/workers/: evaluation-worker.ts
scripts/: run_batch_test.py  start_dashboard.sh  test_basic.py
src/ad_testing_agents/: config.py
(+54 files in other folders)
